--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Stefan Vandenborne",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^9.7.0",
+    "autoprefixer": "^10.2.5",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.2",
@@ -18,10 +18,11 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-line-ending-corrector": "^1.0.3",
     "gulp-livereload": "^4.0.2",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-prettyerror": "^2.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2"
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "postcss": "^8.2.8"
   }
 }
